// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getOptions A defaults 1`] = `
{
  "canFailStop": false,
  "canFix": false,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": false,
  "willShowVersion": false,
}
`;

exports[`getOptions B non existing target 1`] = `
{
  "canFailStop": false,
  "canFix": true,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": false,
  "willShowVersion": false,
}
`;

exports[`getOptions C show help 1`] = `
{
  "canFailStop": false,
  "canFix": false,
  "canForce": false,
  "logLevel": "7-error",
  "willInit": false,
  "willShowHelp": true,
  "willShowVersion": false,
}
`;
